samples/_failures_safe/1761242279_baabbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_935f609c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_935f609c.c:139:12: error: missing terminating " character
  139 |     printf("Vertex Distance from
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_935f609c.c:139:5: error: expected expression at end of input
  139 |     printf("Vertex Distance from
      |     ^~~~~~
./samples/SAFE/__tmp_935f609c.c:139:5: error: expected declaration or statement at end of input
